# SFMLRPG

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  State.cpp  State.h  main.cpp
Components/: AnimationComponent.cpp  AnimationComponent.h  MovementComponent.cpp  MovementComponent.h
Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
UI/: Button.cpp  Button.h
